err.txt
thirdparty/googletest/googlemock/test/gmock-actions_test.cc:95:1: error: syntax error [syntaxError]
TEST(BuiltInDefaultValueTest, ExistsForPointerTypes) {
^
thirdparty/googletest/googlemock/test/gmock-cardinalities_test.cc:62:1: error: syntax error [syntaxError]
TEST(CardinalityTest, IsDefaultConstructable) {
^
thirdparty/googletest/googlemock/test/gmock-function-mocker_test.cc:190:1: error: syntax error [syntaxError]
TEST_F(MockMethodFunctionMockerTest, MocksVoidFunction) {
^
thirdparty/googletest/googlemock/test/gmock-generated-actions_test.cc:964:39: error: syntax error [syntaxError]
                HAS_1_TEMPLATE_PARAMS(template <typename Pointee> class,
                                      ^
thirdparty/googletest/googlemock/test/gmock-generated-function-mockers_test.cc:180:1: error: syntax error [syntaxError]
TEST_F(FunctionMockerTest, MocksVoidFunction) {
^
thirdparty/googletest/googlemock/test/gmock-generated-internal-utils_test.cc:49:1: error: syntax error [syntaxError]
TEST(MatcherTupleTest, ForSize0) {
^
thirdparty/googletest/googlemock/test/gmock-generated-matchers_test.cc:147:1: error: syntax error [syntaxError]
TEST(ElementsAreTest, CanDescribeExpectingNoElement) {
^
thirdparty/googletest/googlemock/test/gmock-internal-utils_test.cc:75:1: error: syntax error [syntaxError]
TEST(JoinAsTupleTest, JoinsOneTuple) {
^
thirdparty/googletest/googlemock/test/gmock-matchers_test.cc:216:1: error: syntax error [syntaxError]
TEST(MonotonicMatcherTest, IsPrintable) {
^
thirdparty/googletest/googlemock/test/gmock-more-actions_test.cc:228:1: error: syntax error [syntaxError]
TEST(InvokeTest, Nullary) {
^
thirdparty/googletest/googlemock/test/gmock-nice-strict_test.cc:235:1: error: syntax error [syntaxError]
TEST(NiceMockTest, AllowsExpectedCall) {
^
thirdparty/googletest/googlemock/test/gmock-nice-strict_test.cc:138:1: error: syntax error [syntaxError]
TEST(RawMockTest, WarningForUninterestingCall) {
^
thirdparty/googletest/googlemock/test/gmock-pp-string_test.cc:110:3: error: There is an unknown macro here somewhere. Configuration is required. If sss is a macro then please configure it. [unknownMacro]
  EXPECT_EXPANSION("0", GMOCK_PP_IS_BEGIN_PARENS(sss() sss));
  ^
thirdparty/googletest/googlemock/test/gmock-pp_test.cc:34:41: error: There is an unknown macro here somewhere. Configuration is required. If sss is a macro then please configure it. [unknownMacro]
static_assert(!GMOCK_PP_IS_BEGIN_PARENS(sss() sss), "");
                                        ^
thirdparty/googletest/googlemock/test/gmock-spec-builders_test.cc:122:1: error: syntax error [syntaxError]
TEST(MockMethodTest, CanInstantiateWithIncompleteArgType) {
^
thirdparty/googletest/googlemock/test/gmock_ex_test.cc:56:1: error: syntax error [syntaxError]
TEST(DefaultValueTest, ThrowsRuntimeErrorWhenNoDefaultValue) {
^
thirdparty/googletest/googlemock/test/gmock_leak_test_.cc:58:1: error: syntax error [syntaxError]
TEST(LeakTest, LeakedMockWithExpectCallCausesFailureWhenLeakCheckingIsEnabled) {
^
thirdparty/googletest/googlemock/test/gmock_stress_test.cc:197:1: error: syntax error [syntaxError]
TEST(StressTest, CanUseGMockWithThreads) {
^
thirdparty/googletest/googletest/samples/sample10_unittest.cc:94:1: error: syntax error [syntaxError]
TEST(ListenersTest, DoesNotLeak) {
^
thirdparty/googletest/googletest/samples/sample1_unittest.cc:100:1: error: syntax error [syntaxError]
TEST(FactorialTest, Zero) {
^
thirdparty/googletest/googletest/samples/sample2_unittest.cc:77:1: error: syntax error [syntaxError]
TEST(MyString, ConstructorFromCString) {
^
thirdparty/googletest/googletest/samples/sample3_unittest.cc:120:1: error: syntax error [syntaxError]
TEST_F(QueueTestSmpl3, DefaultConstructor) {
^
thirdparty/googletest/googletest/samples/sample5_unittest.cc:97:1: error: syntax error [syntaxError]
TEST_F(IntegerFunctionTest, Factorial) {
^
thirdparty/googletest/googletest/samples/sample6_unittest.cc:99:1: error: syntax error [syntaxError]
TYPED_TEST(PrimeTableTest, ReturnsFalseForNonPrimes) {
^
thirdparty/googletest/googletest/samples/sample6_unittest.cc:170:1: error: syntax error [syntaxError]
TYPED_TEST_P(PrimeTableTest2, ReturnsFalseForNonPrimes) {
^
thirdparty/googletest/googletest/samples/sample7_unittest.cc:79:1: error: syntax error [syntaxError]
TEST_P(PrimeTableTestSmpl7, ReturnsFalseForNonPrimes) {
^
thirdparty/googletest/googletest/samples/sample8_unittest.cc:107:1: error: syntax error [syntaxError]
TEST_P(PrimeTableTest, ReturnsFalseForNonPrimes) {
^
thirdparty/googletest/googletest/samples/sample9_unittest.cc:90:1: error: syntax error [syntaxError]
TEST(CustomOutputTest, PrintsMessage) {
^
thirdparty/googletest/googletest/src/gtest-death-test.cc:1287:26: error: Uninitialized variable: dummy [uninitvar]
  StackLowerThanAddress(&dummy, &result);
                         ^
thirdparty/googletest/googletest/src/gtest.cc:4726:34: error: Null pointer dereference: static_cast<volatile int*>(nullptr) [nullPointer]
      *static_cast<volatile int*>(nullptr) = 1;
                                 ^
thirdparty/googletest/googletest/test/googletest-death-test-test.cc:1377:29: error: There is an unknown macro here somewhere. Configuration is required. If ; is a macro then please configure it. [unknownMacro]
  EXPECT_DEATH_IF_SUPPORTED(;, "");
                            ^
thirdparty/googletest/googletest/test/googletest-death-test-test.cc:704:65: error: There is an unknown macro here somewhere. Configuration is required. If ; is a macro then please configure it. [unknownMacro]
  ASSERT_DEBUG_DEATH(GTEST_LOG_(INFO) << "In ASSERT_DEBUG_DEATH"; return, "")
                                                                ^
thirdparty/googletest/googletest/test/googletest-death-test-test.cc:1300:53: error: There is an unknown macro here somewhere. Configuration is required. If ; is a macro then please configure it. [unknownMacro]
  EXPECT_NONFATAL_FAILURE(EXPECT_DEATH_IF_SUPPORTED(;, ""), "");
                                                    ^
thirdparty/googletest/googletest/test/googletest-filepath-test.cc:99:1: error: syntax error [syntaxError]
TEST(IsEmptyTest, ReturnsTrueForEmptyPath) {
^
thirdparty/googletest/googletest/test/googletest-filter-unittest_.cc:49:1: error: syntax error [syntaxError]
TEST_F(FooTest, Abc) {
^
thirdparty/googletest/googletest/test/googletest-listener-test.cc:150:1: error: syntax error [syntaxError]
TEST_F(ListenerTest, DoesFoo) {
^
thirdparty/googletest/googletest/test/googletest-message-test.cc:44:1: error: syntax error [syntaxError]
TEST(MessageTest, DefaultConstructor) {
^
thirdparty/googletest/googletest/test/googletest-options-test.cc:60:1: error: syntax error [syntaxError]
TEST(XmlOutputTest, GetOutputFormatDefault) {
^
thirdparty/googletest/googletest/test/googletest-output-test_.cc:539:1: error: syntax error [syntaxError]
TEST_F(MixedUpTestCaseTest, FirstTestFromNamespaceFoo) {}
^
thirdparty/googletest/googletest/test/googletest-output-test_.cc:43:1: error: There is an unknown macro here somewhere. Configuration is required. If GTEST_DISABLE_MSC_WARNINGS_PUSH_ is a macro then please configure it. [unknownMacro]
GTEST_DISABLE_MSC_WARNINGS_PUSH_(4127 /* conditional expression is constant */)
^
thirdparty/googletest/googletest/test/googletest-param-test-invalid-name1-test_.cc:36:1: error: syntax error [syntaxError]
TEST_P(DummyTest, Dummy) {
^
thirdparty/googletest/googletest/test/googletest-param-test-invalid-name2-test_.cc:41:1: error: syntax error [syntaxError]
TEST_P(DummyTest, Dummy) {
^
thirdparty/googletest/googletest/test/googletest-port-test.cc:67:1: error: syntax error [syntaxError]
TEST(IsXDigitTest, ReturnsFalseForNarrowNonAscii) {
^
thirdparty/googletest/googletest/test/googletest-printers-test.cc:254:1: error: syntax error [syntaxError]
TEST(PrintEnumTest, AnonymousEnum) {
^
thirdparty/googletest/googletest/test/googletest-shuffle-test_.cc:49:1: error: syntax error [syntaxError]
TEST_F(A, A) {}
^
thirdparty/googletest/googletest/test/googletest-test-part-test.cc:56:1: error: syntax error [syntaxError]
TEST_F(TestPartResultTest, ConstructorWorks) {
^
thirdparty/googletest/googletest/test/gtest-typed-test_test.cc:166:1: error: syntax error [syntaxError]
TYPED_TEST(NumericTest, DefaultIsZero) {
^
thirdparty/googletest/googletest/test/gtest-typed-test_test.cc:411:1: error: syntax error [syntaxError]
TYPED_TEST_P(NumericTest, DefaultIsZero) {
^
thirdparty/googletest/googletest/test/gtest-unittest-api_test.cc:113:1: error: syntax error [syntaxError]
TEST(ApiTest, UnitTestImmutableAccessorsWork) {
^
thirdparty/googletest/googletest/test/gtest-unittest-api_test.cc:101:1: error: syntax error [syntaxError]
TYPED_TEST(TestCaseWithCommentTest, Dummy) {}
^
thirdparty/googletest/googletest/test/gtest_environment_test.cc:107:1: error: syntax error [syntaxError]
TEST(FooTest, Bar) {
^
thirdparty/googletest/googletest/test/gtest_premature_exit_test.cc:79:1: error: syntax error [syntaxError]
TEST_F(PrematureExitDeathTest, FileExistsDuringExecutionOfDeathTest) {
^
thirdparty/googletest/googletest/test/gtest_repeat_test.cc:85:1: error: syntax error [syntaxError]
TEST(FooTest, ShouldFail) {
^
thirdparty/googletest/googletest/test/gtest_sole_header_test.cc:43:27: error: There is an unknown macro here somewhere. Configuration is required. If ; is a macro then please configure it. [unknownMacro]
  EXPECT_NO_FATAL_FAILURE(;);
                          ^
thirdparty/googletest/googletest/test/gtest_stress_test.cc:119:1: error: syntax error [syntaxError]
TEST(StressTest, CanUseScopedTraceAndAssertionsInManyThreads) {
^
thirdparty/googletest/googletest/test/gtest_unittest.cc:5386:25: error: syntax error [syntaxError]
INSTANTIATE_TEST_CASE_P(, CodeLocationForTESTP, Values(0));
                        ^
